--- a/assignment_1b.Rmd
+++ b/assignment_1b.Rmd
@@ -8,10 +8,6 @@ output: github_document
 
 - overall making a function that will compare the proportion of total zooplankton biomass made up by each zooplanton taxa in regions across the SOG
 
-# Exercise 1: Make a Function (25 points)
-
-In this exercise, you’ll be making a function and fortifying it. The function need not be complicated. The function need not be “serious”, but shouldn’t be nonsense.
-
 ## Datset Background (Copied from Milestones 1 and 2)
 
 The *zooplankton_biomass* dataset used for this project was acquired courtesy of Fisheries and Oceans Canada (DFO). I will be using this dataset for my MSc research project. It contains zooplankton biomass data by major taxa collected from 1980 to 2018 at a variety of stations in the NE Pacific and Canadian Arctic oceanic regions. Samples were collected both during the day and at night using a variety of sampling net types (Government of Canada [date unknown]).
@@ -36,7 +32,6 @@ The *zooplankton_biomass* dataset used for this project was acquired courtesy of
 #load the readr package (this package will allow the CSV file containing the project dataset to be read)
 library(readr) 
 library(tidyverse)
-library(lubridate)
 
 #read the project dataset in RStudio, and save this dataset as a variable called "zooplankton_biomass"
 #the CSV file containing the project dataset is located in the Milestone2 folder of the project GitHub repository
@@ -44,10 +39,10 @@ zooplankton_biomass <- read_csv('IOS_zooplankton_1980_2018_as_biomass_major_taxa
 
 ```
 
-For this milestone, we will mainly be using the cleaned up version of the data from Milestone 2:
+I want to use a cleaned up version of the zooplankton_biomass dataset that I created for the Mini Data Analysis Milestone 3 assignment from the STAT545A class.
 ```{r}
-#create a subset of the zooplankton_biomass dataset called "zooplankton_biomass_mi3"
-zooplankton_biomass_mi3 <- zooplankton_biomass %>% 
+#create a subset of the zooplankton_biomass dataset called "zooplankton_biomass_cleaned"
+zooplankton_biomass_cleaned <- zooplankton_biomass %>% 
   #remove the columns from 'Station' to 'latitude' and from 'time' to 'CTD' from the dataset
   select(-c(Station:latitude, time:CTD)) %>% 
   #separate the date column into three columns of year, month, and day
@@ -63,32 +58,15 @@ zooplankton_biomass_mi3 <- zooplankton_biomass %>%
   #arrange the columns so that the time_period column comes after the year column
   select(c(region_name, year, time_period, everything()))
 
-#view the cleaned up dataset ready for further analysis in milestone 3
-print(zooplankton_biomass_mi3)
-```
-
-*Below Text and Code from Milestone 3*
-
-I want to create a box plot showing the proportion of total zooplankton biomass made up by a main zooplankton prey group for Pacific salmon and herring. Main zooplankton prey groups tend to be larger zooplankton (Brian Hunt, Personal Communication, 2021). I have selected a taxa that is not microzooplankton, Copepoda, for this plot (Hobday et al. 2006). Copepods have been known to be an important prey group for Pacific fish species and other marine organisms (Jackson & Lenz 2016). I want to compare the proportion of total biomass that this taxa makes up across oceanic regions near Vancouver Island.
-
-First, let's modify the region_name column in the zooplankton_biomass_mi3 (cleaned) dataset and convert this variable from a character object to a factor.
-```{r}
-
-#let's confirm the class of the region_name variable in the zooplankton_biomass_mi3 dataset
-class(zooplankton_biomass_mi3$region_name)
-
-#convert the region_name variable from a character object to a factor
-#below line of code from Schork [date unknown]
-zooplankton_biomass_mi3$region_name <- as.factor(zooplankton_biomass_mi3$region_name)
-
-#confirm that the region_name variable is now a factor class
-class(zooplankton_biomass_mi3$region_name)
+#view the cleaned up dataset
+print(zooplankton_biomass_cleaned)
 ```
 
 
+
 ```{r}
-#create a new dataset called "zooplankton_biomass_forfunc" from the cleaned version of the original dataset
-zooplankton_funct <- zooplankton_biomass_mi3 %>% 
+#create a new dataset called "zooplankton_funct" from the cleaned version of the original dataset
+zooplankton_funct <- zooplankton_biomass_cleaned %>% 
   #create a new column (variable) called "total_biomass" that sums all zooplankton taxa biomass values in each row
   mutate("total_biomass" = rowSums(across(where(is.numeric)))) %>%
   #divide the zooplankton biomass values by the total biomass in that sample so that these cells contain the proportion of total biomass the zooplankton taxa makes up in each sample
@@ -96,115 +74,72 @@ zooplankton_funct <- zooplankton_biomass_mi3 %>%
   mutate(across(where(is.numeric), ~./total_biomass)) %>% 
   #remove the total biomass column
   select(-total_biomass) %>% 
-  #filter the data to only contain rows with a region_name containing "Strait of Georgia"
-  filter(str_detect(region_name, "Strait of Georgia")) %>% 
-  #remove unused levels
-  droplevels()
+  rename("Time Period" = time_period) %>% 
+  # below code adapted from https://stackoverflow.com/questions/64188671/renaming-multiple-columns-with-dplyr-renameacross
+  rename_with(~str_c(., " Proportion of Total Biomass"), Polychaeta:Animalia)
   
+
+
 #view the new dataset
 print(zooplankton_funct)
 
 ```
+# Exercise 1: Make a Function (25 points)
 
-Now I want to create a function that plots a zooplankton taxat species against each other to compare the proportion of each in total biomass in the Strait of Georgia.
+In this exercise, you’ll be making a function and fortifying it. The function need not be complicated. The function need not be “serious”, but shouldn’t be nonsense.
 
+I want to create a function that compares the proportion of total biomass made up by one of the zooplankton taxa pre and post heat wave.
+
+No NAs in data.
+```{r}
+
+#https://discuss.analyticsvidhya.com/t/how-can-i-check-whether-my-data-frame-contains-na-inf-values-in-some-column-or-not-in-r/1647
+any(is.na(zooplankton_funct))
+
+```
 
 ```{r}
 
 #create a function called "boxplot_zoop"
 boxplot_zoop <- function (data, x, y) {
-  #below line of code from https://stackoverflow.com/questions/49943092/how-to-set-ggplot-x-label-equal-to-variable-name-during-lapply
-  get_name <- deparse(substitute(y))
-  return(
     ggplot(data, aes({{ x }}, {{ y }})) + 
   #specify a box plot, set the width of the boxes, and specify the transparency of the box plot
   geom_boxplot(aes(fill= {{ x }})) + 
-    #change the legend label
-    #the below line of code is adapted from Alboukadel 2018
-    labs(fill = "Region") +
     #change the theme of the plot
     theme_linedraw() +
-    #change the x and y axis titles
-    ylab(label = "Proportion of Total Biomass") +
-    xlab(label= get_name) +
     #change the colours of each box
     #the below line of code is from STHDA [date unknown]
     scale_fill_manual(values=c("lightsteelblue1", "aquamarine1", "lightsalmon1")) +
     #remove the x axis ticks and labels
     #below line of code from Elferts 2016
     theme(axis.text.x=element_blank(),
-          axis.ticks.x=element_blank()) )
-    
+          axis.ticks.x=element_blank(),
+          axis.title.x=element_blank())
 }
 
-boxplot_zoop(zoop_funct, region_name, Copepoda)
+boxplot_zoop(zooplankton_funct, `Time Period`, `Polychaeta Proportion of Total Biomass`)
 ```
 
+# Exercise 2: Document your Function (20 points)
+
+
+
+
+Before getting started, let's also modify the region_name column in the zooplankton_biomass_mi3 (cleaned) dataset and convert this variable from a character object to a factor.
+```{r}
+
+#convert the region_name variable from a character object to a factor
+#below line of code from Schork [date unknown]
+#zooplankton_biomass_mi3$region_name <- as.factor(zooplankton_biomass_mi3$region_name)
+
+```
+
+
+below line of code from https://stackoverflow.com/questions/49943092/how-to-set-ggplot-x-label-equal-to-variable-name-during-lapply
   
-```{r}
-  +
-  #change the x and y axis titles
-  xlab(label = {{ x }}) +
-  ylab(label = "Proportion of Total Biomass") +
-  #change the legend label
-  #the below line of code is adapted from Alboukadel 2018
-  labs(fill = "Region") +
-  #change the theme of the plot
-  theme_linedraw() +
-  #remove the x axis ticks and labels
-  #below line of code from Elferts 2016
-  theme(axis.text.x=element_blank(),
-        axis.ticks.x=element_blank())
-}
+  get_name <- deparse(substitute(y))
 
-
-boxplot_zoop(zooplankton_biomass_forfunc, region_name, Copepoda)
-
-```
-
-
-
-```{r}
-
-#using the new dataset we just created,
-prop_biomass_cop %>%
-  #create a plot with the region name on the x axis and the proportion of total biomass made up by Copepods on the y axis
-  ggplot(aes(region_name, Copepoda)) + 
-  #specify a box plot, set the width of the boxes, and specify the transparency of the box plot
-  geom_boxplot(aes(fill=region_name), width = 0.75, alpha = 0.7) +
-  #change the x and y axis titles
-  xlab(label = Copepoda) +
-  ylab(label = "Proportion of Total Biomass") +
-  #change the legend label
-  #the below line of code is adapted from Alboukadel 2018
-  labs(fill = "Region") +
-  #change the theme of the plot
-  theme_linedraw() +
-  #remove the x axis ticks and labels
-  #below line of code from Elferts 2016
-  theme(axis.text.x=element_blank(),
-        axis.ticks.x=element_blank()) 
-
-```
-Function Ideas
-
-
-- making boxplot to compare different species 
-
-
-Did you repeat any code for a data analysis in STAT 545A? If so, consider making a function for this action.
-Consider bundling a specific group_by() %>% summarise() workflow.
-Write a wrapper around an existing function.
-For example, perhaps accepting a narrower range of inputs (like not allowing logical vectors), or providing a different output.
-A specific example: my rqdist() function is a wrapper around quantreg::rq(), narrowing its functionality.
-It’s usually better to narrow a function’s focus than to broaden, so that a function doesn’t end up doing too much.
-Make a function extracting parts of an "lm" object that you can’t easily access (broom aside), or measuring the “difference” between a linear and quadratic fit.
-Make a special plot that you’d want to repeat when exploring your data.
-…
-
-
-
-
+xlab(label= get_name)
 
 possible sources   
 https://subscription.packtpub.com/book/big_data_and_business_intelligence/9781783554553/1/ch01lvl1sec12/passing-parameter-values-to-titles-and-labels
