--- a/assignment_1b.Rmd
+++ b/assignment_1b.Rmd
@@ -12,7 +12,7 @@ The *zooplankton_biomass* dataset used for this project was acquired courtesy of
 
 # Install and Load Packages (Section taken from Milestone 2)
 
-**Install** `tidyverse`, `readr`, and `roxygen2` packages if you have not already done so:
+**Install** `tidyverse`, `readr`, `roxygen2`, and `testthat` packages if you have not already done so:
 ```{r, message = FALSE}
 
 #install the tidyverse package:
@@ -21,18 +21,22 @@ The *zooplankton_biomass* dataset used for this project was acquired courtesy of
 #install the readr package:
 #install.packages("readr")
 
-#install the roxygen2 packages
+#install the roxygen2 package:
 #install.packages("roxygen2")
+
+#install the testthat package:
+#install.packages("testthat")
 
 ```
 
-**Load** the `tidyverse` and `roxygen2` packages, as well as the `zooplankton dataset` being used for this project:
+**Load** the `tidyverse`, `testthat`, and `roxygen2` packages, as well as the `zooplankton dataset` being used for this project:
 ```{r, message = FALSE}
 
 #load the tidyverse package
 #load the readr package (this package will allow the CSV file containing the project dataset to be read)
 library(readr) 
 library(tidyverse)
+library(testthat)
 library(roxygen2)
 
 #read the project dataset in RStudio, and save this dataset as a variable called "zooplankton_biomass"
@@ -93,34 +97,35 @@ print(zooplankton_funct)
 
 In this exercise, you’ll be making a function and fortifying it. The function need not be complicated. The function need not be “serious”, but shouldn’t be nonsense.
 
-I want to create a function that compares the proportion of total biomass made up by one of the zooplankton taxa pre and post heat wave.
+I want to create a function that compares the proportion of total biomass made up by one of the zooplankton taxa pre and post heat wave. I will make this function general so that it can be used to compare any numeric variable in each category of any categorical variable. 
 
-No NAs in data.
-```{r}
 
-#https://discuss.analyticsvidhya.com/t/how-can-i-check-whether-my-data-frame-contains-na-inf-values-in-some-column-or-not-in-r/1647
-any(is.na(zooplankton_funct))
-
-```
+- named variable x and y because of what axis, the categorical variable names would be on x axis and numeric variables on y axis
+- people are used to an x and y variable when creating plots
 
 ```{r}
 #' @title Multiple Boxplot for a Numeric Variable across Categories 
-#' @description This function creates a multiple boxplot that shows the distribution of a numeric variable in different categories contained in a categorical variable
-#' @params data The dataframe that contains the variables that you would like to use to create the bozplot
-#' @params x The categorical variable that we want to plot a numerical variable across
-#' @params y The numeric variable that we want to examine the distribution of across a categorical variable 
+#' @description This function creates a multiple boxplot that shows the distribution of a numeric variable in different categories contained in a categorical variable. NA values will automatically be removed from the data, which will lead to the warning message "Removed n rows containing non-finite values (stat_boxplot)" with n being the number of NA rows removed.
+#' @params dataframe The dataframe that contains the variables that you would like to use to create the boxplot
+#' @params x The categorical variable that we want to plot a numerical variable across.
+#' @params y The numeric variable that we want to examine the distribution of across a categorical variable
 #' @return A boxplot showing the distribution of y in each category contained in x
+#' 
+#' Creates a boxplot using the "CO2" dataset from the r "datasets" package that shows the distribution of CO2 concentration of grass plants in each treatment type (chilled or nonchilled):
+#' @examples boxplot_numeric_category(CO2, Treatment, conc)
+#' Creates a boxplot using the dplyr "starwars" dataset that shows the distribution of the height of starwars characters based on the sex of the characters:
+#' @examples starwars %>% boxplot_numeric_category(sex, height)
+#' Creates a boxplot using the dplyr "storms" dataset that shows the distribution of the wind speeds observed for the storms Caroline and Doris:
+#' @examples boxplot_numeric_category((storms %>% filter(name == c("Amy", "Doris"))), name, wind)
 
-#create a function called "boxplot_zoop"
-boxplot_zoop <- function (data, x, y) {
-    ggplot(data, aes({{ x }}, {{ y }})) + 
+#create a function called "boxplot_numeric_category"
+boxplot_numeric_category <- function (dataframe, x, y) {
+  
+  ggplot(dataframe, aes({{ x }}, {{ y }})) + 
   #specify a box plot, set the width of the boxes, and specify the transparency of the box plot
   geom_boxplot(aes(fill= {{ x }})) + 
     #change the theme of the plot
     theme_linedraw() +
-    #change the colours of each box
-    #the below line of code is from STHDA [date unknown]
-    scale_fill_manual(values=c("lightsteelblue1", "aquamarine1", "lightsalmon1")) +
     #remove the x axis ticks and labels
     #below line of code from Elferts 2016
     theme(axis.text.x=element_blank(),
@@ -128,15 +133,33 @@ boxplot_zoop <- function (data, x, y) {
           axis.title.x=element_blank())
 }
 
+# remove na https://stackoverflow.com/questions/17216358/eliminating-nas-from-a-ggplot
+
 ```
 
 Now let's test this function to see if it works by creating a boxplot that compares Copepod biomass pre and pst heat wave.
 ```{r}
 
-boxplot_zoop(zooplankton_funct, `Time Period`, `Copepoda Proportion of Total Biomass`)
+boxplot_cop_biomass <- boxplot_numeric_category(zooplankton_funct, `Time Period`, `Copepoda Proportion of Total Biomass`)
 
+print(boxplot_cop_biomass)
 
 ```
+
+- expect equal two boxplots
+- expect error if one is not numeric
+- expect error if one is not variABLE
+- expect class is a boxplot
+
+
+
+```{r}
+
+expect_equal()
+
+```
+
+
 
 # Exercise 2: Document your Function (20 points)
 
@@ -161,11 +184,18 @@ What the function returns, using the @return tag.
 Before getting started, let's also modify the region_name column in the zooplankton_biomass_mi3 (cleaned) dataset and convert this variable from a character object to a factor.
 ```{r}
 
+
 #convert the region_name variable from a character object to a factor
 #below line of code from Schork [date unknown]
 #zooplankton_biomass_mi3$region_name <- as.factor(zooplankton_biomass_mi3$region_name)
 
 ```
+
+
+
+
+
+params na.rm This command can be set equal to (=) TRUE to remove NA values or FALSE to leave NA values in.
 
 
 below line of code from https://stackoverflow.com/questions/49943092/how-to-set-ggplot-x-label-equal-to-variable-name-during-lapply
