--- a/assignment_1b.Rmd
+++ b/assignment_1b.Rmd
@@ -5,8 +5,10 @@ date: "01/11/2021"
 output: github_document
 ---
 
+*Note that some code and text below will overlap with code and text from the STAT545A Mini Data Analysis*
 
-## Datset Background (Section Copied from STAT545A Mini Data Analysis Project)
+## Datset Background 
+*(Section Copied from STAT545A Mini Data Analysis Project)*
 
 The *zooplankton_biomass* dataset used for this assignment was acquired courtesy of Fisheries and Oceans Canada (DFO). I will be using this dataset for my MSc research project. It contains zooplankton biomass data by major taxa collected from 1980 to 2018 at a variety of stations in the NE Pacific and Canadian Arctic oceanic regions. Samples were collected both during the day and at night using a variety of sampling net types (Government of Canada [date unknown]).
 
@@ -31,15 +33,15 @@ The *zooplankton_biomass* dataset used for this assignment was acquired courtesy
 
 **Load** the `tidyverse`, `testthat`, and `roxygen2` packages, as well as the `zooplankton dataset` being used for this project:
 
-*some of the below code from STAT545A Mini Data Analysis*
-
 ```{r, message = FALSE}
 
-#load the tidyverse package
 #load the readr package (this package will allow the CSV file containing the project dataset to be read)
 library(readr) 
+#load the tidyverse package
 library(tidyverse)
+#load the testthat package
 library(testthat)
+#load the roxygen2 package
 library(roxygen2)
 
 #read the project dataset in RStudio, and save this dataset as a variable called "zooplankton_biomass"
@@ -91,29 +93,21 @@ zooplankton_funct <- zooplankton_biomass_cleaned %>%
 print(zooplankton_funct)
 
 ```
-# Exercises 1-3: Make a Function, Document the Function, Include Examples
+# Exercises 1-2: Make a Function and Document the Function
 
 I want to create a function that will allow me to compare the proportion of total biomass made up by one of the zooplankton taxa pre and post heat wave. I will make this function general so that it can be used to compare any numeric variable across each category of any categorical variable. 
 
 - named variable x and y because of what axis, the categorical variable names would be on x axis and numeric variables on y axis
 - people are used to an x and y variable when creating plots
 
-```{r, error=TRUE}
+```{r}
+
 #' @title Multiple Boxplot for a Numeric Variable across Categories 
 #' @description This function creates a multiple boxplot that shows the distribution of a numeric variable in different categories contained in a categorical variable. NA values will automatically be removed from the data, which will lead to the warning message "Removed n rows containing non-finite values (stat_boxplot)" with n being the number of NA rows removed.
 #' @params dataframe The dataframe that contains the variables that you would like to use to create the boxplot. The class of this parameter must be dataframe.
 #' @params x The categorical variable that we want to plot a numerical variable across. x must be a vector of class character or factor.
 #' @params y The numeric variable that we want to examine the distribution of across a categorical variable. y must be a vector of class double, integer, or numeric.
 #' @return A boxplot showing the distribution of y in each category contained in x
-#' @examples 
-#' # Create a boxplot using the "CO2" dataset from the r "datasets" package that shows the distribution of CO2 concentration of grass plants in each treatment type (chilled or nonchilled):
-#' boxplot_numeric_category(CO2, Treatment, conc)
-#' # Create a boxplot using the dplyr "starwars" dataset that shows the distribution of the height of starwars characters based on the sex of the characters:
-#'starwars %>% boxplot_numeric_category(sex, height)
-#' # Create a boxplot using the dplyr "starwars" dataset that attempts to plot the distribution of the name of starwars characters based on the sex of the characters.Because the name variable is a character and not a numeric vector, the function will deliver an error message.
-#' starwars %>% boxplot_numeric_category(sex, name)
-#' # Create a boxplot using the dplyr "storms" dataset that shows the distribution of the wind speeds observed for the storms Caroline and Doris:
-#' boxplot_numeric_category((storms %>% filter(name == c("Amy", "Doris"))), name, wind)
 
 boxplot_numeric_category <- function (dataframe, x, y) {
   
@@ -127,11 +121,11 @@ calculations_y <- summarise(dataframe, is.numeric = is.numeric({{y}}) | is.doubl
     }
 
   if(!calculations_x$is.character) {
-    stop('You have entered a non-character or non-factor input. Please enter a character variable or factor variable for the x input', class(calculations_x$class))
+    stop('You have entered a non-character or non-factor input. Please enter a character or factor variable for the x input', class(calculations_x$class))
   }
   
   if(!calculations_y$is.numeric) {
-    stop('You have entered a non-numeric or non-factor input. Please enter a character variable or factor variable for the x input', class(calculations_y$class))
+    stop('You have entered a non-numeric, non-integer, or non-double input. Please enter a variable of a numeric, integer, or double class for the y input', class(calculations_y$class))
   }
   
 
@@ -151,6 +145,26 @@ calculations_y <- summarise(dataframe, is.numeric = is.numeric({{y}}) | is.doubl
 
 ```
 
+# Exercise 3: Include Examples 
+
+```{r, error=TRUE}
+
+#create a boxplot using the "CO2" dataset from the r "datasets" package that shows the distribution of CO2 concentration of grass plants in each treatment type (chilled or nonchilled)
+boxplot_numeric_category(CO2, Treatment, conc)
+
+#create a boxplot using the dplyr "starwars" dataset that shows the distribution of the height of starwars characters based on the sex of the characters
+starwars %>% boxplot_numeric_category(sex, height)
+
+#create a boxplot using the dplyr "starwars" dataset that attempts to plot the distribution of the name of starwars characters based on the sex of the characters.
+#Because the name variable is a character and not a numeric vector, the function will deliver an error message.
+starwars %>% boxplot_numeric_category(sex, name)
+
+#create a boxplot using the dplyr "storms" dataset that shows the distribution of the wind speeds observed for the storms Caroline and Doris
+boxplot_numeric_category((storms %>% filter(name == c("Amy", "Doris"))), name, wind)
+
+```
+
+
 Now let's run this function see if it will create a boxplot that compares Copepod biomass pre and post heat wave.
 ```{r}
 
@@ -160,7 +174,7 @@ print(boxplot_cop_biomass)
 
 ```
 
-It appears to be working, but let's run some tests to be sure!
+The function appears to be working, but let's run some tests to be sure!
 
 # Exercise 4: Test the Function
 
@@ -185,33 +199,15 @@ test_that("Output Class Type of Boxplot Function Examples is ggplot", {
 
 ```
 
-
-
 ```{r}
-
-  
-  
-  
-  #code modified from Kea Rutherford
-  #calculations_x <- summarise(dataframe, is.character = is.character({{y}}) | is.factor({{x}}), class = class({{x}}))
-  
-  #calculations_y <- summarise(dataframe, is.numeric = is.numeric({{y}}), is.double = is.double({{y}}), is.integer = #is.integer({{y}}), class = class({{y}}))
-  
-  
-  #if(!is.data.frame(dataframe)) {
-    #stop('You have entered an input that is not a dataframe. Please use a dataframe for the dataframe input')
-    #}
-
-  #if(!calculations_x$is.character || !calculations_x$is.factor) {
-    #stop('You have entered a non-character or non-factor input. Please enter a character variable or factor variable for #the x input', class(calculations_x$class))
-  #}
-  
-  #if(!calculations_y$is.numeric || !calculations_y$is.integer || !calculations_y$is.double) {
-    #stop('You have entered a non-character or non-factor input. Please enter a character variable or factor variable for #the x input', class(calculations_y$class))
- # }
-  
-  #if(!(is.numeric(eval(substitute(y), dataframe)) || is.integer(eval(substitute(y), dataframe)) || #is.double(eval(substitute(y), dataframe)))) {
-    #stop('You have entered a non-numeric, non-integer, or non-double input. Please enter a variable of a numeric, #integer, or double class for the y input')
-  #}
+#' @examples 
+#' # Create a boxplot using the "CO2" dataset from the r "datasets" package that shows the distribution of CO2 concentration of grass plants in each treatment type (chilled or nonchilled):
+#' boxplot_numeric_category(CO2, Treatment, conc)
+#' # Create a boxplot using the dplyr "starwars" dataset that shows the distribution of the height of starwars characters based on the sex of the characters:
+#'starwars %>% boxplot_numeric_category(sex, height)
+#' # Create a boxplot using the dplyr "starwars" dataset that attempts to plot the distribution of the name of starwars characters based on the sex of the characters.Because the name variable is a character and not a numeric vector, the function will deliver an error message.
+#' starwars %>% boxplot_numeric_category(sex, name)
+#' # Create a boxplot using the dplyr "storms" dataset that shows the distribution of the wind speeds observed for the storms Caroline and Doris:
+#' boxplot_numeric_category((storms %>% filter(name == c("Amy", "Doris"))), name, wind)
 
 ```
